classDiagram
    class Customer {
      +name: str
      +email: str
      +phone: str
      +device_id: str
    }

    class Order {
      +order_id: str
      +customer: Customer
      +total: float
    }

    class NotificationSender {
      <<interface>>
      +send(order: Order) dict
    }

    class EmailNotificationSender {
      +send(order: Order) dict
    }

    class SmsNotificationSender {
      +send(order: Order) dict
    }

    class PushNotificationSender {
      +send(order: Order) dict
    }

    class NotificationFactory {
      +create_sender(type: str) NotificationSender
    }

    class OrderNotificationSystem {
      -notifications_sent: list~dict~
      -factory: NotificationFactory
      +process_order(order: Order, notification_types: list~str~) void
      +get_notification_history() list~dict~
    }

    NotificationSender <|.. EmailNotificationSender
    NotificationSender <|.. SmsNotificationSender
    NotificationSender <|.. PushNotificationSender

    OrderNotificationSystem --> NotificationFactory
    OrderNotificationSystem --> NotificationSender
    Order --> Customer
